--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Ashutosh's Portfolio"
+      name="Andrew Caskey's Portfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Andrew Caskey Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
-    <meta name="description" content="Ashutosh's Personal Portfolio Website" property="og:description">
+    <meta property="og:url" content="https://andrewcaskey.com/" />
+    <meta name="description" content="Andrew Caskey's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Ashutosh, PortFolio, MasterPortfolio, Ashutosh's Portfolio" />
-    <meta name="author" content="Ashutosh" />
-    <meta name="application-name" content="Ashutosh's PortFolio" />
+    <meta name="keywords" content="Andrew Caskey, Observability Engineer, Portfolio" />
+    <meta name="author" content="Andrew Caskey" />
+    <meta name="application-name" content="Andrew Caskey's Portfolio" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
@@ -64,6 +64,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
@@ -77,7 +80,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ashutosh's Portfolio</title>
+    <title>Andrew Caskey's Portfolio</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
